--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "minimist": "^0.2.0",
-    "mocha": "^1.21.3"
+    "mocha": "^1.21.3",
+    "parse-database-url": "^0.2.1"
   }
 }
